# libmosaic

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  SConstruct
docs/: annotated.html  annotated_dup.js  attr_8h.html  attr_8h.js  attr_8h_source.html  classes.html  dir_175e8fbecd029d4b76b5c7f40ac7265a.html  dir_175e8fbecd029d4b76b5c7f40ac7265a.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  error_8h.html  error_8h.js  error_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  image_8h.html  image_8h.js  image_8h_source.html  index.html  io_8h.html  io_8h.js  io_8h_source.html  menudata.js  mosaic_8h.html  mosaic_8h.js  mosaic_8h_source.html  navtreedata.js  navtreeindex0.js  structMOSAIC.html  structMOSAIC.js
docs/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_3.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js
include/: color.h  curs_mos.h  libmosaic.h  libmosaic_curses.h  mosaic.h  stream_io.h
include/mosaic/: attr.h  error.h  image.h  io.h
pkg-config/: CMakeLists.txt  mosaic.pc.in
pkgconfigs/: mosaic.pc  mosaic_all.pc  mosaic_color.pc  mosaic_curs_mos.pc  mosaic_stream_io.pc
src/: CMakeLists.txt  SConscript  attr.c  color.c  curs_mos.c  error.c  image.c  io.c  mosaic.c  moscat.c  stream_io.c
